--- a/RomRepoMgr/Views/ExportDat.xaml
+++ b/RomRepoMgr/Views/ExportDat.xaml
@@ -46,22 +46,22 @@
     <Border Padding="15">
         <Grid RowDefinitions="Auto,auto,Auto,Auto">
             <TextBlock Grid.Row="0"
-                       Text="{Binding StatusMessage}"
+                       Text="{Binding StatusMessage, Mode=OneWay}"
                        HorizontalAlignment="Center" />
             <ProgressBar Grid.Row="1"
                          IsIndeterminate="True"
                          HorizontalAlignment="Stretch"
-                         IsVisible="{Binding ProgressVisible}" />
+                         IsVisible="{Binding ProgressVisible, Mode=OneWay}" />
             <TextBlock Grid.Row="2"
-                       Text="{Binding ErrorMessage}"
+                       Text="{Binding ErrorMessage, Mode=OneWay}"
                        HorizontalAlignment="Center"
                        Foreground="Red"
-                       IsVisible="{Binding ErrorVisible}" />
+                       IsVisible="{Binding ErrorVisible, Mode=OneWay}" />
             <Button Grid.Row="3"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    IsEnabled="{Binding CanClose}"
-                    Command="{Binding CloseCommand}">
+                    IsEnabled="{Binding CanClose, Mode=OneWay}"
+                    Command="{Binding CloseCommand, Mode=OneWay}">
                 <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
             </Button>
         </Grid>
