--- a/RomRepoMgr/Views/EditDat.xaml
+++ b/RomRepoMgr/Views/EditDat.xaml
@@ -56,7 +56,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Name}"
+                         Text="{Binding Name, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="1"
@@ -70,7 +70,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Version}"
+                         Text="{Binding Version, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="2"
@@ -84,7 +84,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Author}"
+                         Text="{Binding Author, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="3"
@@ -98,7 +98,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Category}"
+                         Text="{Binding Category, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="4"
@@ -112,7 +112,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Comment}"
+                         Text="{Binding Comment, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="5"
@@ -126,7 +126,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Date}"
+                         Text="{Binding Date, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="6"
@@ -140,7 +140,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Description}"
+                         Text="{Binding Description, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="7"
@@ -154,7 +154,7 @@
                 <TextBox Grid.Column="1"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Center"
-                         Text="{Binding Homepage}"
+                         Text="{Binding Homepage, Mode=TwoWay}"
                          Padding="5" />
             </Grid>
             <Grid Grid.Row="8"
@@ -168,7 +168,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding TotalMachines}"
+                           Text="{Binding TotalMachines, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <Grid Grid.Row="9"
@@ -182,7 +182,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding CompleteMachines}"
+                           Text="{Binding CompleteMachines, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <Grid Grid.Row="10"
@@ -196,7 +196,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding IncompleteMachines}"
+                           Text="{Binding IncompleteMachines, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <Grid Grid.Row="11"
@@ -210,7 +210,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding TotalRoms}"
+                           Text="{Binding TotalRoms, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <Grid Grid.Row="12"
@@ -224,7 +224,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding HaveRoms}"
+                           Text="{Binding HaveRoms, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <Grid Grid.Row="13"
@@ -238,7 +238,7 @@
                 <TextBlock Grid.Column="1"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"
-                           Text="{Binding MissRoms}"
+                           Text="{Binding MissRoms, Mode=OneWay}"
                            Padding="5" />
             </Grid>
             <StackPanel Grid.Row="14"
@@ -246,20 +246,20 @@
                         HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Command="{Binding SaveCommand}"
-                        IsVisible="{Binding Modified}">
+                        Command="{Binding SaveCommand, Mode=OneWay}"
+                        IsVisible="{Binding Modified, Mode=OneWay}">
                     <TextBlock Text="{x:Static resources:Localization.SaveLabel}" />
                 </Button>
                 <Button HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Command="{Binding CancelCommand}"
-                        IsVisible="{Binding Modified}">
+                        Command="{Binding CancelCommand, Mode=OneWay}"
+                        IsVisible="{Binding Modified, Mode=OneWay}">
                     <TextBlock Text="{x:Static resources:Localization.CancelLabel}" />
                 </Button>
                 <Button HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Command="{Binding CloseCommand}"
-                        IsVisible="{Binding !Modified}">
+                        Command="{Binding CloseCommand, Mode=OneWay}"
+                        IsVisible="{Binding !Modified, Mode=OneWay}">
                     <TextBlock Text="{x:Static resources:Localization.CloseLabel}" />
                 </Button>
             </StackPanel>
