--- a/RomRepoMgr/Views/MainWindow.xaml
+++ b/RomRepoMgr/Views/MainWindow.xaml
@@ -17,59 +17,59 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="{x:Static resources:Localization.FileMenuText}">
                 <MenuItem Header="{x:Static resources:Localization.FileMenuImportDatFileText}"
-                          Command="{Binding ImportDatCommand}" />
+                          Command="{Binding ImportDatCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.FileMenuImportDatFolderText}"
-                          Command="{Binding ImportDatFolderCommand}" />
+                          Command="{Binding ImportDatFolderCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.FileMenuSettingsText}"
-                          IsVisible="{Binding !NativeMenuSupported}"
-                          Command="{Binding SettingsCommand}" />
+                          IsVisible="{Binding !NativeMenuSupported, Mode=OneWay}"
+                          Command="{Binding SettingsCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.FileMenuExitText}"
-                          IsVisible="{Binding !NativeMenuSupported}"
-                          Command="{Binding ExitCommand}" />
+                          IsVisible="{Binding !NativeMenuSupported, Mode=OneWay}"
+                          Command="{Binding ExitCommand, Mode=OneWay}" />
             </MenuItem>
             <MenuItem Header="{x:Static resources:Localization.FilesystemMenuText}">
                 <MenuItem Header="{x:Static resources:Localization.FilesystemMenuMountText}"
-                          Command="{Binding MountCommand}"
-                          IsEnabled="{Binding Vfs, Converter={x:Static ObjectConverters.IsNull}}" />
+                          Command="{Binding MountCommand, Mode=OneWay}"
+                          IsEnabled="{Binding Vfs, Converter={x:Static ObjectConverters.IsNull}, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.FilesystemMenuUmountText}"
-                          Command="{Binding UmountCommand}"
-                          IsEnabled="{Binding Vfs, Converter={x:Static ObjectConverters.IsNotNull}}" />
+                          Command="{Binding UmountCommand, Mode=OneWay}"
+                          IsEnabled="{Binding Vfs, Converter={x:Static ObjectConverters.IsNotNull}, Mode=OneWay}" />
                 <Separator />
             </MenuItem>
             <MenuItem Header="{x:Static resources:Localization.RomsMenuText}">
                 <MenuItem Header="{x:Static resources:Localization.RomsMenuImportText}"
-                          Command="{Binding ImportRomFolderCommand}" />
+                          Command="{Binding ImportRomFolderCommand, Mode=OneWay}" />
                 <Separator />
             </MenuItem>
             <MenuItem Header="{x:Static resources:Localization.RomSetsMenuText}"
-                      IsEnabled="{Binding SelectedRomSet, Converter={x:Static ObjectConverters.IsNotNull}}">
+                      IsEnabled="{Binding SelectedRomSet, Converter={x:Static ObjectConverters.IsNotNull}, Mode=OneWay}">
                 <MenuItem Header="{x:Static resources:Localization.RomSetsMenuSaveRomsText}"
-                          Command="{Binding ExportRomsCommand}" />
+                          Command="{Binding ExportRomsCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.RomSetsMenuSaveDatText}"
-                          Command="{Binding ExportDatCommand}" />
+                          Command="{Binding ExportDatCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.RomSetsMenuEditText}"
-                          Command="{Binding EditRomSetCommand}" />
+                          Command="{Binding EditRomSetCommand, Mode=OneWay}" />
                 <Separator />
                 <MenuItem Header="{x:Static resources:Localization.RomSetsMenuDeleteText}"
-                          Command="{Binding DeleteRomSetCommand}" />
+                          Command="{Binding DeleteRomSetCommand, Mode=OneWay}" />
                 <Separator />
             </MenuItem>
             <MenuItem Header="{x:Static resources:Localization.DatabaseMenuText}">
                 <MenuItem Header="{x:Static resources:Localization.DatabaseMenuUpdateStatsText}"
-                          Command="{Binding UpdateStatsCommand}" />
+                          Command="{Binding UpdateStatsCommand, Mode=OneWay}" />
                 <Separator />
             </MenuItem>
             <MenuItem Header="{x:Static resources:Localization.HelpMenuText}">
                 <MenuItem Header="{x:Static resources:Localization.HelpMenuAboutText}"
                           Name="AboutMenuItem"
-                          IsVisible="{Binding !NativeMenuSupported}"
-                          Command="{Binding AboutCommand}" />
+                          IsVisible="{Binding !NativeMenuSupported, Mode=OneWay}"
+                          Command="{Binding AboutCommand, Mode=OneWay}" />
             </MenuItem>
         </Menu>
         <TabControl HorizontalAlignment="Stretch"
@@ -78,104 +78,104 @@
                 <TabItem.Header>
                     <TextBlock Text="{x:Static resources:Localization.RomSets}" />
                 </TabItem.Header>
-                <DataGrid ItemsSource="{Binding RomSets}"
+                <DataGrid ItemsSource="{Binding RomSets, Mode=OneWay}"
                           HorizontalScrollBarVisibility="Visible"
                           SelectedItem="{Binding SelectedRomSet, Mode=TwoWay}"
                           CanUserSortColumns="True"
                           CanUserResizeColumns="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Name}"
+                        <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetNameLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Version}"
+                        <DataGridTextColumn Binding="{Binding Version, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetVersionLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Author}"
+                        <DataGridTextColumn Binding="{Binding Author, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetAuthorLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Category}"
+                        <DataGridTextColumn Binding="{Binding Category, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetCategoryLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Date}"
+                        <DataGridTextColumn Binding="{Binding Date, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetDateLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Description}"
+                        <DataGridTextColumn Binding="{Binding Description, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetDescriptionLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Comment}"
+                        <DataGridTextColumn Binding="{Binding Comment, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetCommentLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Homepage}"
+                        <DataGridTextColumn Binding="{Binding Homepage, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.HomepageLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding TotalMachines}"
+                        <DataGridTextColumn Binding="{Binding TotalMachines, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetTotalMachinesLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding CompleteMachines}"
+                        <DataGridTextColumn Binding="{Binding CompleteMachines, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetCompleteMachinesLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding IncompleteMachines}"
+                        <DataGridTextColumn Binding="{Binding IncompleteMachines, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetIncompleteMachinesLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding TotalRoms}"
+                        <DataGridTextColumn Binding="{Binding TotalRoms, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetTotalRomsLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding HaveRoms}"
+                        <DataGridTextColumn Binding="{Binding HaveRoms, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
                                 <TextBlock Text="{x:Static resources:Localization.RomSetHaveRomsLabel}" />
                             </DataGridTextColumn.Header>
                         </DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding MissRoms}"
+                        <DataGridTextColumn Binding="{Binding MissRoms, Mode=OneWay}"
                                             Width="Auto"
                                             IsReadOnly="True">
                             <DataGridTextColumn.Header>
